Fixed rotation of layers

Just merged with the rotation code of the image

BUG:279772